--- a/introduction-to-css/styles.css
+++ b/introduction-to-css/styles.css
@@ -1,8 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Raleway&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;1,500&display=swap');
 
 html {
     font-family: 'Raleway', sans-serif;
     background-color: #fff;
+    font-family: 'Roboto', sans-serif;
 }
 
 body {
@@ -12,7 +14,11 @@ body {
 header {
     text-align: center;
     background-color: #6b469a;
-    padding: 10px;
+    font-family:Arial;
+    font-size: 20px;
+    margin: 20px 20px 20px 20px; 
+    /*top right bottom left or SHORTHAND 20px*/ 
+    padding: 20px;
 }
 
 h1 {
@@ -25,6 +31,8 @@ h2 {
     font-size: 3rem;
     line-height: 3rem;
     color: #fff;
+    font-family: Roboto;
+    font-size: 20px;
 }
 
 nav {
@@ -34,9 +42,11 @@ nav {
 }
 
 a {
-    color: #fff;
+    color: rgb(57, 22, 195);
     text-decoration: none;
     padding: 5px;
+    font-family: Roboto;
+    font-size: 15px;
 }
 
 a:hover {
@@ -61,6 +71,23 @@ footer {
     background-color: #6b469a;
     padding: 10px;
     color: #fff;
+    font-family: Arial;
+    font-size: 30px;
 }
 
 /* Your code here */
+nav a {
+    display: block;
+
+}
+
+nav {
+    width: 200px;
+}
+
+#img {
+    width: 300px;
+    height: 200px;
+    BORDER: 3px dashed orange;
+}
+
