--- a/media-queries-exercise-2/styles.css
+++ b/media-queries-exercise-2/styles.css
@@ -1,10 +1,15 @@
-html {
+
+
+/* html {
     background-color: #00d982;
     font-family: Arial, Helvetica, sans-serif;
-}
+} */
 
 body {
     padding: 20px;
+    border: 2px, red;
+    background-color: #00d982;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 header {
@@ -17,9 +22,9 @@ h2 {
     background-color: #5e7992;
     color: #fff;
     font-size: 1rem;
-}
-
-p {
+    text-align: center;
+    padding: 20px;
+    margin-bottom: 0px;
 }
 
 form {
@@ -31,21 +36,40 @@ form {
 label {
     font-weight: bold;
     color: #5e7992;
+    display: inline-block;
+    width: 100%;
+    height: 15px;
+    margin-left: 15px;
+    margin-top: 20px;
 }
 
 input {
     box-sizing: border-box;
     border: 1px solid #ebeeef;
     background-color: #f9fafa;
+    display: inline-block;
+    width: calc(100% - 30px);
+    height: 15px;
+    padding: 15px;
+    margin-left: 15px;
+    margin-bottom: 10px;
+    margin-right: 15px;
+    margin-top: 5px;
 }
 
-.form-item {
-}
 
 button {
     background-color: #00d982;
     border: none;
     color: #fff;
+    display: inline-block;
+    width: calc(100% - 30px);
+    padding-top: 15px;
+    padding-bottom: 15px;
+    margin-left: 15px;
+    margin-right: 15px;
+    margin-bottom: 40px;
+    margin-top: 10px;
 }
 
 input,
@@ -54,3 +78,42 @@ button {
     border-radius: 2px;
 }
 
+/* Screen above 600px here */
+@media (min-width: 600px) {
+
+    .row {
+        display: inline-block;
+        width: calc(100% / 2 - 5px);
+    }
+}
+
+
+/* Screen above 900px here */
+@media (min-width: 900px) {
+
+    body {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+    
+
+    #form-wrapper {
+    display: inline-block;
+    align-self: center;
+    width: 80%;
+    padding-top:15%;
+    padding-bottom: 15%;
+    margin:30px;
+    }
+    
+    header {
+        width: 80%;
+        text-align: center;
+        vertical-align: center;
+        padding-top:10%;
+        padding-bottom:10%;
+    }
+
+    
+    
